# workcell

./: .gitignore  404.html  LICENSE  README.md  README_zh-hans.md  index.html  opensearch.xml  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: -improvement.md  bug_report.md  feature_request.md
.github/workflows/: build-and-push-image.yml  build-image-ghcr.yml  build-image.yml  docs.yml  release.yml
assets/css/: styles.2acfeab9.css
assets/js/: 14eb3368.c965feb6.js  17cc80cf.5aa7d422.js  1a4e3797.f55a4e48.js  1be78505.a10b823d.js  242d11c4.d378fd07.js  2529.dab5746f.js  3057a009.eab594d2.js  347742ee.98daf3cd.js  393be207.98346d31.js  3a5cb9f6.23831c8a.js  3e99697f.8c7cb6cc.js  47f74995.c5624ac9.js  531923e6.f072c098.js  5fbfe74b.671a74e0.js  6171fd3c.0b0789a2.js  6780.ed3f17f1.js  72e14192.037421af.js  814f3328.78b6224b.js  8de9b9f2.ccaae389.js  8e5187c7.b91b4acc.js  9233e9d2.b8c11926.js  935f2afb.a7ce1a6f.js  9388506a.3c37a664.js  9e4087bc.86e594c0.js  a48f10da.474d2b00.js  acbd5f58.27d4da52.js  aeebf858.897ad906.js  af6a1c76.ca06770f.js  c34a58c7.f7aa640a.js  c7f45d4f.65228da7.js  ccc49370.ed079837.js  e2a69d11.f6bb4b04.js  e352eb79.1dd26a8f.js  fc80ed68.ee9cb4a1.js  ffe01df6.c67953a4.js  main.b1e26b75.js  runtime~main.ffc7ef87.js
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/tags/: index.html
blog/welcome/: index.html
docker/: Dockerfile.python3.8
docker/python3.8/: Dockerfile
docker/python3.9/: Dockerfile
docs/: README.md  docusaurus.config.js  package-lock.json  package.json
docs/blog/: authors.yml
docs/docs/: quick-start.md
docs/quick-start/: index.html
examples/detect_language/: app.py
examples/hello_perspective/: app.py  requirements.txt
examples/hello_plotly/: app.py
markdown-page/: index.html
scripts/: docs.sh  release.sh
search/: index.html
test/: test_callable.py  test_cli.py  test_spec.py
workcell/: __init__.py
zh-Hans/: 404.html  index.html  opensearch.xml  sitemap.xml
(+175 files in other folders)
