[tool.poetry]
name = "workcell"
version = "0.0.27"
description = "Turn python function into microservice."
authors = ["jiandong <jiandong@weanalyze.co>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
fastapi = "^0.85.1"
pydantic = "^1.10.2"
typer = "^0.3.1"
uvicorn = "^0.18.3"
python-dotenv = "^0.19.0"
pandas = "^1.5.2"
mangum = "^0.17.0"
colorama = "^0.4.6"
docker = "^6.0.1"
jsonpickle = "^3.0.1"
plotly = "^5.12.0"
perspective-python = "^1.9.3"
poetry-bumpversion = "^0.3.0"
altair = "^4.2.2"
pyarrow = "^11.0.0"
huggingface-hub = "^0.12.0"
orjson = "^3.8.6"

[tool.poetry.scripts]
workcell = 'workcell.cli:cli'

[[tool.poetry_bumpversion.replacements]]
files = ["workcell/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

